add export_to_path method, change nbs.00_core.ipynb

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -169,20 +169,20 @@
     "                        num_proc=num_proc,\n",
     "                    )\n",
     "\n",
-    "    def export_to_path(self, output_path):\n",
+    "    def export_to_path(self, export_path):\n",
     "        \"\"\"\n",
-    "        Export the processed datasets to a specified output path\n",
+    "        Export the cleaned & filtered dataset to a desired export path\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            os.makedirs(output_path, exist_ok=True)\n",
+    "            os.makedirs(export_path, exist_ok=True)\n",
     "        except OSError as e:\n",
-    "            logger.error(f\"Failed to create directory: {output_path}. Error: {str(e)}\")\n",
+    "            logger.error(f\"Failed to create directory: {export_path}. Error: {str(e)}\")\n",
     "            return\n",
     "\n",
     "        for i, datasource in enumerate(self.datasources):\n",
     "            name = datasource[\"name\"]\n",
     "            filename = f\"{name}.csv\"\n",
-    "            filepath = os.path.join(output_path, filename)\n",
+    "            filepath = os.path.join(export_path, filename)\n",
     "            try:\n",
     "                datasource[\"dataset\"].to_csv(filepath, index=False)\n",
     "                logger.info(f\"Exported {name} dataset to {filepath}\")\n",
@@ -3611,8 +3611,8 @@
     "pipeline.run(dry_run=True, global_filters=[minhash_dedup])\n",
     "\n",
     "# function call to export the processed data source to a desired path\n",
-    "# output_path = \"/path/to/desired/path\"\n",
-    "# pipeline.export_to_path(output_path)\n",
+    "# export_path = \"/path/to/desired/path\"\n",
+    "# pipeline.export_to_path(export_path)\n",
     "\n",
     "assert len(ds) == len(pipeline.datasources[0][\"dataset\"])\n",
     "assert \"duplicate\" in pipeline.datasources[0][\"dataset\"].features\n",
