modify export_to_path for out_type, json_indication

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -169,9 +169,13 @@
     "                        num_proc=num_proc,\n",
     "                    )\n",
     "\n",
-    "    def export_to_path(self, export_path):\n",
+    "    def export_to_path(self, export_path, output_type=\"csv\"):\n",
     "        \"\"\"\n",
     "        Export the cleaned & filtered dataset to a desired export path\n",
+    "\n",
+    "        Args:\n",
+    "            export_path(str): Path to directory\n",
+    "            output_type(str, optional param): Output type of the file to export as\n",
     "        \"\"\"\n",
     "        try:\n",
     "            os.makedirs(export_path, exist_ok=True)\n",
@@ -184,7 +188,12 @@
     "            filename = f\"{name}.csv\"\n",
     "            filepath = os.path.join(export_path, filename)\n",
     "            try:\n",
-    "                datasource[\"dataset\"].to_csv(filepath, index=False)\n",
+    "                if output_type == \"csv\":\n",
+    "                    datasource[\"dataset\"].to_csv(filepath, index=False)\n",
+    "                elif output_type == \"json\":\n",
+    "                    datasource[\"dataset\"].to_json(filepath, index=False)\n",
+    "                else:\n",
+    "                    logger.error(f\"Invalid output_type: {output_type}. Skipping export for {name} dataset.\")\n",
     "                logger.info(f\"Exported {name} dataset to {filepath}\")\n",
     "            except Exception as e:\n",
     "                logger.error(\n",
@@ -3610,9 +3619,11 @@
     "pipeline = Pipeline(datasources)\n",
     "pipeline.run(dry_run=True, global_filters=[minhash_dedup])\n",
     "\n",
-    "# function call to export the processed data source to a desired path\n",
+    "# optional function call to export the processed data source to a desired path\n",
     "# export_path = \"/path/to/desired/path\"\n",
-    "# pipeline.export_to_path(export_path)\n",
+    "# output_types = ['csv', 'json'] - Optional, default is \"csv\"\n",
+    "# json_indication = \"records\" - Optional, default is \"records\"\n",
+    "# pipeline.export_to_path(export_path, output_types[1], json_indication=indication)\n",
     "\n",
     "assert len(ds) == len(pipeline.datasources[0][\"dataset\"])\n",
     "assert \"duplicate\" in pipeline.datasources[0][\"dataset\"].features\n",
