--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -895,7 +895,9 @@
     "    threshold: float = 0.85,  # The threshold to use for calculating the false positive rate.\n",
     "    column: str = \"content\",  # The column to use for calculating the false positive rate.\n",
     "    verbose: bool = False,\n",
-    ") -> Set:  # The set of duplicate ids that should be removed, leaving only one id in each community.\n",
+    ") -> (\n",
+    "    Set\n",
+    "):  # The set of duplicate ids that should be removed, leaving only one id in each community.\n",
     "    \"\"\"\n",
     "    Find the duplicate communities from the queried dataset.\n",
     "    \"\"\"\n",
