Run some tests and update the readme with a note call out

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -229,6 +229,22 @@
    "metadata": {},
    "source": [
     ":::{.callout-note}\n",
+    "Note: If you want to to export the processed data source to a desired path, you can specify an export path and the output type (csv or json) in the `export_to_path` function.\n",
+    "\n",
+    "```python\n",
+    "export_path = \"/path/to/desired/path\"\n",
+    "output_types = ['csv', 'json'] # Optional, default is \"csv\"\n",
+    "json_indication = \"records\" # Optional, default is \"records\"\n",
+    "pipeline.export_to_path(export_path, output_types[1], json_indication=indication)\n",
+    "```\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{.callout-note}\n",
     "Note: If you want to run cleaners first, you can pass `cleaning_first=True` to the `run` function.\n",
     "\n",
     "```python\n",
