init new nsfw_words clean method, change 02_clean.ipynb

--- a/nbs/02_clean.ipynb
+++ b/nbs/02_clean.ipynb
@@ -475,6 +475,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test the nsfw_word.csv generator\n",
+    "import csv\n",
+    "\n",
+    "nsfw_words = [\n",
+    "    'word1',\n",
+    "    'word2',\n",
+    "    'word3',\n",
+    "    'word4',\n",
+    "    'word5',\n",
+    "    'word6'\n",
+    "]\n",
+    "\n",
+    "csv_file_path = 'nsfw_words.csv'\n",
+    "\n",
+    "with open(csv_file_path, 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['Words'])\n",
+    "    writer.writerows([[word] for word in nsfw_words])\n",
+    "\n",
+    "print(f\"CSV file '{csv_file_path}' generated successfully.\")\n",
+    "\n",
+    "##################\n",
+    "\n",
+    "# test the replace_nsfw function\n",
+    "def replace_nsfw(\n",
+    "    text: str,  # The text to replace NSFW words in\n",
+    "    nsfw_words_csv: str,  # Path to the CSV file containing NSFW words\n",
+    ") -> str:  # The text with NSFW words replaced\n",
+    "    \"\"\"Replace NSFW words from text with an empty string.\"\"\"\n",
+    "    try:\n",
+    "        with open(nsfw_words_csv, 'r') as file:\n",
+    "            reader = csv.reader(file)\n",
+    "            nsfw_words = list(reader)[0]\n",
+    "    except (FileNotFoundError, IndexError) as e:\n",
+    "        print(f\"Error! NSFW dictionary could not found or indexed: {e}\")\n",
+    "        return text\n",
+    "    for word in nsfw_words:\n",
+    "        pattern = r\"\\b\" + re.escape(word) + r\"\\b\\s*\"\n",
+    "        text = re.sub(pattern, \"\", text, flags=re.IGNORECASE)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# | hide\n",
     "import nbdev\n",
     "\n",
