init new nsfw_words clean method, change 02_clean.ipynb

--- a/nbs/02_clean.ipynb
+++ b/nbs/02_clean.ipynb
@@ -501,19 +501,21 @@
     "# test the replace_nsfw function\n",
     "def replace_nsfw(\n",
     "    text: str,  # The text to replace NSFW words in\n",
-    "    nsfw_words_csv: str,  # Path to the CSV file containing NSFW words\n",
-    ") -> str:  # The text with NSFW words replaced\n",
+    "    nsfw_words_csv: str,  # Path to the CSV file containing list of NSFW words\n",
+    ") -> str:  # The text return to be replaced\n",
     "    \"\"\"Replace NSFW words from text with an empty string.\"\"\"\n",
     "    try:\n",
-    "        with open(nsfw_words_csv, 'r') as file:\n",
+    "      with open(nsfw_words_csv, 'r') as file:\n",
     "            reader = csv.reader(file)\n",
-    "            nsfw_words = list(reader)[0]\n",
+    "            nsfw_words = [row[0] for row in reader][1:]  # Exclude the header row\n",
     "    except (FileNotFoundError, IndexError) as e:\n",
-    "        print(f\"Error! NSFW dictionary could not found or indexed: {e}\")\n",
+    "        print(f\"Error! NSFW dictionary could not be found or indexed: {e}\")\n",
     "        return text\n",
+    "    \n",
     "    for word in nsfw_words:\n",
     "        pattern = r\"\\b\" + re.escape(word) + r\"\\b\\s*\"\n",
     "        text = re.sub(pattern, \"\", text, flags=re.IGNORECASE)\n",
+    "    \n",
     "    return text"
    ]
   },
