solve resolve conflicts

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -193,7 +193,9 @@
     "                elif output_type == \"json\":\n",
     "                    datasource[\"dataset\"].to_json(filepath, index=False)\n",
     "                else:\n",
-    "                    logger.error(f\"Invalid output_type: {output_type}. Skipping export for {name} dataset.\")\n",
+    "                    logger.error(\n",
+    "                        f\"Invalid output_type: {output_type}. Skipping export for {name} dataset.\"\n",
+    "                    )\n",
     "                logger.info(f\"Exported {name} dataset to {filepath}\")\n",
     "            except Exception as e:\n",
     "                logger.error(\n",
